# adjustabodies

./: .gitattributes  README.md  pyproject.toml
adjustabodies/: __init__.py  arena.py  cli.py  fit.py  green_binary.py  ik_cpu.py  ik_mjx.py  io.py  model.py  qvel.py  resize.py  segment_lengths.py  stac.py  symmetry.py
adjustabodies.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adjustabodies/species/: __init__.py  rodent.py
docs/: adjustabodies_algorithm.md  adjustabodies_and_ik_dataset.md
models/: rodent_data_driven_limits.xml  rodent_fitted_symmetric.mjb  rodent_green_all.json  rodent_green_all.mjb  rodent_green_captain.json  rodent_green_captain.mjb  rodent_green_emilie.json  rodent_green_emilie.mjb  rodent_green_heisenberg.json  rodent_green_heisenberg.mjb  rodent_green_mario.json  rodent_green_mario.mjb  rodent_green_remy.json  rodent_green_remy.mjb  rodent_red_mj_dev_fitted.mjb
scripts/: batch_ik_v4.py  batch_ik_warmstart.py  cluster_batch_ik_green.sh  cluster_batch_ik_v4.sh  cluster_batch_ik_warmstart.sh  cluster_ego_umap.sh  cluster_fit_green.sh  cluster_ik_umap_v4.sh  cluster_perrat_ik.sh  cluster_setup_rapids.sh  cluster_test_gpu_ik.sh  cluster_umap_pipeline.sh  cluster_warmstart_umap.sh  compare_ik.py  fit_green_rats.py  fit_ramp_trial.py  gpu_umap.py  gpu_umap_ego.py  merge_ik_csvs.py  pack_ego_umap_binary.py  pack_umap_binary.py  perrat_ik_green.py  preprocess_ego_umap.py  preprocess_ik_for_umap.py  preprocess_ik_for_umap_v4.py
tests/: test_species.py
